test/corpus/markup.txt
================================================================================
All styles
================================================================================
*bold*
/italic/
_underline_
`verbatim`
$inline math$
--------------------------------------------------------------------------------

    (document
      (paragraph
        (bold
          (token)
          (word)
          (token))
        (italic
          (token)
          (word)
          (token))
        (underline
          (token)
          (word)
          (token))
        (verbatim
          (token)
          (word)
          (token))
        (inline_math
          (token)
          (word)
          (word)
          (token))))

================================================================================
Italic
================================================================================
Here is /italic/ text.
--------------------------------------------------------------------------------

    (document
      (paragraph
        (word)
        (word)
        (italic
          (token)
          (word)
          (token))
        (word)))

================================================================================
Strikethrough
================================================================================
~a~
--------------------------------------------------------------------------------

    (document
      (paragraph
        (strikethrough
          (token)
          (word)
          (token))))

================================================================================
Underline
================================================================================
_a_
--------------------------------------------------------------------------------

    (document
      (paragraph
        (underline
          (token)
          (word)
          (token))))

================================================================================
Verbatim
================================================================================
`a`
--------------------------------------------------------------------------------

    (document
      (paragraph
        (verbatim
          (token)
          (word)
          (token))))

================================================================================
Inline math
================================================================================
$a$
--------------------------------------------------------------------------------

    (document
      (paragraph
        (inline_math
          (token)
          (word)
          (token))))

================================================================================
Nested markup 1: bold inside italic
================================================================================
/*a*/
--------------------------------------------------------------------------------

    (document
      (paragraph
        (italic
          (token)
          (bold
            (token)
            (word)
            (token))
          (token))))

================================================================================
Nested markup 2: bold inside italic
================================================================================
/a *a*/
--------------------------------------------------------------------------------

    (document
      (paragraph
        (italic
          (token)
          (word)
          (bold
            (token)
            (word)
            (token))
          (token))))

================================================================================
Nested markup 3: bold inside verbatim
================================================================================
`*a*`
--------------------------------------------------------------------------------

    (document
      (paragraph
        (verbatim
          (token)
          (word)
          (token))))

================================================================================
Nested markup 4: bold inside second paragraph
================================================================================
a

*a*
--------------------------------------------------------------------------------

    (document
      (paragraph
        (word))
      (blank_line)
      (paragraph
        (bold
          (token)
          (word)
          (token))))

================================================================================
Punctuation after markup
================================================================================
*a*. /a/: _a_! ~a~?
--------------------------------------------------------------------------------

    (document
      (paragraph
        (bold
          (token)
          (word)
          (token))
        (word)
        (italic
          (token)
          (word)
          (token))
        (word)
        (underline
          (token)
          (word)
          (token))
        (word)
        (strikethrough
          (token)
          (word)
          (token))
        (word)))
