test/corpus/tags.txt
================================================================================
Ranged tag
================================================================================
@properties
propertie1: value1
propertie2: value2
@end
--------------------------------------------------------------------------------

(document
  (ranged_tag
    (tag)
    (paragraph
      (word)
      (word)
      (word)
      (word))
    (end_tag)))

================================================================================
Ranged tag with parameters
================================================================================
@properties param param
    text
@end
--------------------------------------------------------------------------------

(document
  (ranged_tag
    (token)
    (tag)
    (tag_parameter)
    (tag_parameter)
    (content)
    (end_tag)))

================================================================================
Code block
================================================================================
@code lua
local x = 3
@end
--------------------------------------------------------------------------------

(document
  (code_block
    (tag)
    (tag_parameter)
    (code)
    (end_tag)))

================================================================================
Hashtag
================================================================================
* Title *bold*
#tags home work hobby
--------------------------------------------------------------------------------

(document
  (section
    (heading
      (token)
      (paragraph
        (word)
        (bold
          (token)
          (word)
          (token))))
    (hashtag
      (tag)
      (tag_parameter)
      (tag_parameter)
      (tag_parameter))))

================================================================================
Nested verbatim tags
================================================================================
@properties
    @lvl2
        text

        text
    @end
    @lvl2
        text

        text
    @end
@end
--------------------------------------------------------------------------------

(document
  (ranged_tag
    (tag
      (name))
    (content
      (ranged_tag
        (tag
          (name))
        (content)
        (end_tag))
      (ranged_tag
        (tag
          (name))
        (content)
        (end_tag)))
    (end_tag)))
